# letscook

./: .gitignore  AGENTS.md  README.md  skills_manifest.yaml
.github/workflows/: ci-cd.yml
backend/: .env.example  alembic.ini  pyproject.toml  run_dev_over_ssh.py
backend/alembic/: env.py
backend/app/: main.py  models.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: audit.py  auth.py  meta.py  recipes.py  uploads.py  users.py
backend/app/core/: config.py  sanitizer.py  security.py
backend/app/db/: session.py
backend/app/schemas/: audit.py  auth.py  meta.py  recipe.py  users.py
backend/app/services/: audit.py  backup.py  guest_logs.py
backend/tests/: test_health.py
db/: import_markdown_folder.py  run_import_over_ssh.py  schema.sql  seed_initial_data.py
db/migrations/: 20260520_recipe_interactions.sql  20260520_recipe_markdown.sql  20260520_recipe_verification.sql  20260520_user_avatar.sql  20260525_recipe_facts_nullable.sql  20260602_audit_backup.sql
deploy/: AGENTS.md  README.md  _auto-update.sh  _lib.sh  _setup-auto-deploy.sh  diagnose.sh  install.config.example  install.sh  letscook.service  update.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: changelog.md  version.json
frontend/src/: App.tsx  main.tsx  pell.d.ts  styles.css
legal/: image-rights.md  moderation.md  privacy.md  terms.md
server-scripts/: AGENTS.md  README.md  nodejs-1-install.sh  postgresql-1-install.sh  python-1-install.sh  ssl-1-letsencrypt-nginx.sh
skills/backend/: README.md
skills/community/: README.md
(+8 files in other folders)
